// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputIconToggle when initiated with the content prop renders as expected 1`] = `
<styled.label
  content={
    <span>
      mock content
    </span>
  }
  htmlFor="123"
  iconType="foo"
  inputId="123"
  isHovered={false}
  key="label-icon"
>
  <span>
    mock content
  </span>
</styled.label>
`;

exports[`InputIconToggle when initiated without the content prop renders as expected 1`] = `
<styled.label
  htmlFor="123"
  iconType="foo"
  inputId="123"
  isHovered={false}
  key="label-icon"
>
  <Icon
    bgSize="small"
    type="foo"
  />
</styled.label>
`;
